[package]
name = "rocket-raw-response"
version = "0.4.8"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-raw-response"
homepage = "https://magiclen.org/rocket-raw-response"
keywords = ["rocket", "server", "web", "response", "vec"]
categories = ["web-programming"]
description= "This crate provides a response struct used for responding raw data."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/rocket-raw-response"
branch = "master"

[dependencies]
rocket = "0.4.2"
mime = "0.3.13"
mime_guess = " 2"
percent-encoding = "2"

[dependencies.educe]
version = ">=0.4.0"
features = ["Debug"]
default-features = false